--- a/random.html
+++ b/random.html
@@ -27,15 +27,19 @@
             <section>
                 <section id="credit">
                 <h2>
-                  ここはメインページだ
+                  ルーレット
                 </h2>
-                <p>
-                  いろんな機能があるタイマー！<br>
-                  何かを決めるときに使えるルーレット！<br>
-                  計算するときに使える計算機！があるぞ！<br>
-                  製作時間：　n時間ぐらい
-                </p>
-                <h3></h3>
+                    <p>ルーレット結果：<span id="result"></span></p>
+                    <button id="startButton">ランダムで決める！</button><br>
+                    <button id="inputButton" onclick="input_list()">ルーレットに文字を入力</button>
+                    <script  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"  
+                  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="  crossorigin="anonymous"></script>
+                  <script type="text/javascript" src="javascript/random.js"></script>
+                <h3>使い方</h3><br>
+                ①「ルーレットに文字を入力」を押してルーレットにするものをにゅうりょくしてください。<br>
+                ＊0を入力で終了します。<br>
+                ②「ランダムで決める！」を押すと入力したものがランダムで表示されます。<br>
+                <a href="random.html">ルーレット内容をリセットします</a>
                 <p>
 
 
