--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>便利屋サイト</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="shortcut icon" href="icon.ico"> 
+        <link rel="shortcut icon" href="ico01x4.ico"> 
       </head>
     <header>
       <nav id="global">
@@ -33,7 +33,7 @@
                   いろんな機能があるタイマー！<br>
                   何かを決めるときに使えるルーレット！<br>
                   計算するときに使える計算機！があるぞ！<br>
-                  製作時間：　n時間ぐらい
+                  製作時間：　9時間ぐらい
                 </p>
                 <h3></h3>
                 <p>
