--- a/calc.html
+++ b/calc.html
@@ -5,7 +5,7 @@
         <title>便利屋サイト</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="shortcut icon" href="icon.ico"> 
+        <link rel="shortcut icon" href="ico01x4.ico"> 
         <script src="javascript/calc.js"></script>
       </head>
     <header>
@@ -28,7 +28,7 @@
             <section>
                 <section id="credit">
                 <h2>
-                  ここはメインページだ
+                  計算機
                 </h2>
     <div class="calculator_area">
         <div class="calc_area">
@@ -97,7 +97,8 @@
           </div>
         </div>
       </div>
-                <h3></h3>
+                <h3>説明</h3><br>
+                計算ができるよ！<br>
                 <p>
 
 
