--- a/calc.html
+++ b/calc.html
@@ -98,7 +98,7 @@
         </div>
       </div>
                 <h3>説明</h3><br>
-                計算ができるよ！<br>
+                計算ができます。<br>
                 <p>
 
 
