--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   いろんな機能があるタイマー！<br>
                   何かを決めるときに使えるルーレット！<br>
                   計算するときに使える計算機！があるぞ！<br>
-                  製作時間：　9時間ぐらい
+                  製作時間：約9時間
                 </p>
                 <h3></h3>
                 <p>
