--- a/random.html
+++ b/random.html
@@ -39,7 +39,7 @@
                 ①「ルーレットに文字を入力」を押してルーレットにするものをにゅうりょくしてください。<br>
                 ＊0を入力で終了します。<br>
                 ②「ランダムで決める！」を押すと入力したものがランダムで表示されます。<br>
-                <a href="random.html">ルーレット内容をリセットします</a>
+                <a href="random.html">ルーレット内容をリセットします。</a>
                 <p>
 
 
