--- a/timer.html
+++ b/timer.html
@@ -30,9 +30,9 @@
                   タイマー
                 </h2>
                 <h3>使い方</h3><br>
-                ①開始～分の部分に制限時間（分）を入力します<br>
-                ②「残り～分～秒で鳴らす」部分は、残り○○分で経過音を鳴らしたい場合、入力します<br>
-                ③入力が終えたら計測開始ボタンを押すとカウントダウンされます<br>
+                ①開始～分の部分に制限時間（分）を入力します。<br>
+                ②「残り～分～秒で鳴らす」部分は、残り○○分で経過音を鳴らしたい場合、入力します。<br>
+                ③入力が終えたら計測開始ボタンを押すとカウントダウンされます。<br>
                 注意：スマホには対応していません。
                 <div align="center" id="timera">
                     <canvas id="canvas" width="800" height="400" style="background-color: aqua;" >
