--- a/calc.html
+++ b/calc.html
@@ -5,7 +5,7 @@
         <title>便利屋サイト</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="shortcut icon" href="ico01x4.ico"> 
+        <link rel="shortcut icon" href="icon.ico"> 
         <script src="javascript/calc.js"></script>
       </head>
     <header>
